--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,28 @@
 numpy~=1.26.0
 resampy
 tflite-runtime
-pandas
-scikit-learn
+pandas==1.5.2
+scikit-learn==1.1.3
 # torch # See note below regarding manual installation!
+# torch==1.13.0 # Recommended for EfficientAT models
+# torchaudio==0.13.0 # Recommended for EfficientAT models
+# torchvision==0.14.0 # Recommended for EfficientAT models
 timm # PyTorch Image Models
 
 # Audio Processing
-librosa
+librosa==0.9.2
 opencv-python
 birdnetlib
+av==10.0.0 # From EfficientAT
 
 # Utilities & Visualization
-tqdm 
+tqdm==4.64.1
 matplotlib
 seaborn
-plotly 
-optuna 
+plotly
+optuna
+h5py==3.7.0 # From EfficientAT
+wandb==0.13.5 # From EfficientAT (and you use W&B)
 
 # Environment/Execution
 ipython # For IPython.display used in utils (optional if not running in notebook)
