--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ numpy~=1.26.0
 resampy
 tflite-runtime
 pandas==1.5.2
-scikit-learn==1.1.3
+scikit-learn==1.5.1
 # torch # See note below regarding manual installation!
 # torch==1.13.0 # Recommended for EfficientAT models
 # torchaudio==0.13.0 # Recommended for EfficientAT models
@@ -10,22 +10,23 @@ scikit-learn==1.1.3
 timm # PyTorch Image Models
 
 # Audio Processing
-librosa==0.9.2
+librosa==0.10.2.post1
 opencv-python
 birdnetlib
 av==10.0.0 # From EfficientAT
 
 # Utilities & Visualization
-tqdm==4.64.1
+tqdm==4.66.4
 matplotlib
-seaborn
+seaborn==0.13.2
 plotly
-optuna
-h5py==3.7.0 # From EfficientAT
-wandb==0.13.5 # From EfficientAT (and you use W&B)
+optuna==3.6.1
+h5py==3.13.0 # Updated from 3.7.0 by recent TF install
+wandb>=0.17.0 # Updated by opensoundscape
 
 #annotator
-gradio
+gradio>=4.44.1
+ipywidgets>=8.1.0 # Updated by opensoundscape
 
 # Environment/Execution
 ipython # For IPython.display used in utils (optional if not running in notebook)
@@ -38,3 +39,10 @@ ipython # For IPython.display used in utils (optional if not running in notebook
 # https://pytorch.org/get-started/locally/
 # Example (replace with appropriate versions for your system):
 # pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118 
+
+# For Bioacoustics Model Zoo & its Perch wrapper
+opensoundscape>=0.12.0 # Updated
+tensorflow>=2.19.0   # Updated
+tensorflow-hub
+tf-keras             # Added for tensorflow_hub
+git+https://github.com/kitzeslab/bioacoustics-model-zoo 
